--- a/m2048/Base.lproj/Main.storyboard
+++ b/m2048/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="LVB-YS-i5n">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="LVB-YS-i5n">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -90,7 +91,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="pW0-EP-ySa" kind="modal" identifier="Settings Segue" id="GHf-K9-Vj5"/>
+                                    <action selector="settingsTapped:" destination="LVB-YS-i5n" eventType="touchUpInside" id="2g9-PC-lzR"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4yN-A6-bWQ" customClass="M2Overlay">
@@ -156,7 +157,7 @@
         <!--Settings-->
         <scene sceneID="6xC-WK-Uzx">
             <objects>
-                <viewController id="xld-lF-X62" customClass="M2SettingsViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="settingsView" id="xld-lF-X62" customClass="M2SettingsViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="tKz-ht-c83"/>
                         <viewControllerLayoutGuide type="bottom" id="9PL-uX-ptk"/>
@@ -298,7 +299,7 @@ Additional contributions by Scott Matthewman</string>
         <!--Navigation Controller-->
         <scene sceneID="tpl-yL-NEq">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pW0-EP-ySa" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="settingsNav" automaticallyAdjustsScrollViewInsets="NO" id="pW0-EP-ySa" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="www-l4-DRo">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
